新品的框架创建，新品Fragment下载数据并显示以及新品上啦下拉刷新数据

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.ucai.fulishop">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".application.FuLiShopApplication"
         android:allowBackup="true"
