--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="cn.ucai.fulishop">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".application.FuLiShopApplication"
@@ -11,19 +11,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity"/>
         <activity android:name=".controller.activity.SplashActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity android:name=".controller.activity.CategoryChildActivity"/>
-        <activity android:name=".controller.activity.BoutiqueChildActivity" />
+        <activity android:name=".controller.activity.BoutiqueChildActivity"/>
         <activity android:name=".controller.activity.LoginActivity"/>
         <activity android:name=".controller.activity.RegisterActivity"/>
         <activity android:name=".controller.activity.GoodsDetailsActivity">
+        </activity>
+        <activity android:name=".controller.activity.SettingsActivity">
         </activity>
     </application>
 
