--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         </activity>
         <activity android:name=".controller.activity.SettingsActivity">
         </activity>
+        <activity android:name=".controller.activity.CollectsActivity">
+        </activity>
     </application>
 
 </manifest>
