购物车跳转到订单

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         </activity>
         <activity android:name=".controller.activity.CollectsActivity">
         </activity>
+        <activity android:name=".controller.activity.OrderActivity">
+        </activity>
     </application>
 
 </manifest>
